# Web_Store_App_Project

./: .gitignore  README.md  catalogue.html  category.html  contacts.html  home.html  main.py  pyproject.toml
html_files/: catalogue.html  category.html  contacts.html  home.html
src/: web_app.py
tests/: conftest.py  test_web_app.py
